projetos/desafio-final-dk8s/semana-2/k8s/tipsbank-auditoria/auditoria-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auditoria
  namespace: tipsbank-auditoria
spec:
  selector:
    app: auditoria
  ports:
    - port: 8080
      targetPort: 8080
